# rust_todo_list

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  main.rs  tasks.rs
src/tasks/: crud.rs  lib.rs  model.rs
tests/: test_tasks.rs
