[package]
name = "rust_todo_list"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tasks"
path = "src/tasks/lib.rs"

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0.0"
dirs = "4.0.0"
rusqlite = { version = "0.28.0", features = ["chrono"] }
